Implementing territory class and its test